# ProMCDA

./: .dockerignore  .flake8  .gitignore  .pylintrc  CHANGELOG.MD  CONTRIBUTING.md  Dockerfile  README.md  configuration.json  configuration_w_uncertainty.json  configuration_without_uncertainty.json  joss_paper.md  parallel.ipynb  promcda_app_streamlit.py  pyproject.toml  requirements.txt  setup.py  setup_utils.py  testing_score_calculation.ipynb  testing_various_functionalities.ipynb
JOSS_paper/: joss_paper.html  joss_paper.md  paper.bib  paper.html  paper.md  tables_pro_mcda.docx
MCDTool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ProMCDA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/: use_promcda_library.ipynb
demo_in_notebook/: Untitled.ipynb  test_import.py  use_promcda_library.ipynb
mcda/: mcda_ranking_run.py  mcda_run.py  mcda_sensitivity_analysis.py  mcda_with_robustness.py  mcda_with_uncertainty.py  mcda_with_variability.py  mcda_without_robustness.py  mcda_without_uncertainty.py  mcda_without_variability.py  util.py  utils.py  utils_for_parallelization.py
models/: __init__.py  configuration.py  configuration_modified_input.py  configuration_modified_input_monte_carlo_sampling.py  configuration_modified_input_robustness.py  configuration_modified_input_sensitivity.py  configuration_monte_carlo_sampling.py  configuration_robustness.py  configuration_sensitivity.py  convert_csv_to_json_body.py  error.py  exact_indicator_values.py  inline_response200.py  inline_response2001.py  inline_response2002.py  normal_indicator_values.py  (+9 more)
(+153 files in other folders)
